--- a/document/root.tex
+++ b/document/root.tex
@@ -35,8 +35,8 @@
 
 \begin{document}
 
-\title{fuzzyrule}
-\author{peter}
+\title{Fuzzy Rule}
+\author{Peter Zeller}
 \maketitle
 
 \tableofcontents
