first verion of fuzzy goal_cases

--- a/document/root.tex
+++ b/document/root.tex
@@ -25,9 +25,11 @@
 % this should be the last package used
 \usepackage{pdfsetup}
 
+\usepackage{amsmath}
+
 % urls in roman style, theory text in math-similar italics
 \urlstyle{rm}
-\isabellestyle{it}
+\isabellestyle{rm}
 
 % for uniform font size
 %\renewcommand{\isastyle}{\isastyleminor}
